tests/ui/invalid_config.stderr
error: unknown configuration `invalid_config`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
 --> tests/ui/invalid_config.rs:2:13
  |
2 | #[fieldwork(invalid_config)]
  |             ^^^^^^^^^^^^^^

error: unknown configuration `invalid_config`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
 --> tests/ui/invalid_config.rs:8:13
  |
8 | #[fieldwork(invalid_config = true)]
  |             ^^^^^^^^^^^^^^

error: unknown configuration `invalid`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `name`,
       `option_set_some`, `rename`, `skip`, `get`, `set`, `with`, `get_mut`, `without`, `take`,
       and `into_field`
  --> tests/ui/invalid_config.rs:15:22
   |
15 | struct C(#[fieldwork(invalid)] String);
   |                      ^^^^^^^

error: unknown configuration `ger`; did you mean `get`?

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `name`,
       `option_set_some`, `rename`, `skip`, `get`, `set`, `with`, `get_mut`, `without`, `take`,
       and `into_field`
  --> tests/ui/invalid_config.rs:19:17
   |
19 |     #[fieldwork(ger)]
   |                 ^^^

error: unknown configuration `unknown`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `doc`,
       `name`, and `rename`
  --> tests/ui/invalid_config.rs:25:27
   |
25 |     #[fieldwork(get(copy, unknown))]
   |                           ^^^^^^^

error: unknown configuration `unknown`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `doc_template`,
       and `template`
  --> tests/ui/invalid_config.rs:30:23
   |
30 | #[fieldwork(get(copy, unknown))]
   |                       ^^^^^^^

error: invalid value for key `bounds`
  --> tests/ui/invalid_config.rs:36:13
   |
36 | #[fieldwork(bounds = true)]
   |             ^^^^^^

error: invalid value for key `rename`
  --> tests/ui/invalid_config.rs:43:21
   |
43 |     #[fieldwork(get(rename = true))]
   |                     ^^^^^^

error: unknown configuration `invalid`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
  --> tests/ui/invalid_config.rs:48:13
   |
48 | #[fieldwork(invalid(copy))]
   |             ^^^^^^^

error: unknown configuration `other`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `doc`,
       `name`, and `rename`
  --> tests/ui/invalid_config.rs:55:21
   |
55 |     #[fieldwork(get(other = "anything"))]
   |                     ^^^^^

error: unknown configuration `other`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `doc`,
       `name`, and `rename`
  --> tests/ui/invalid_config.rs:61:21
   |
61 |     #[fieldwork(get(other = anything))]
   |                     ^^^^^

error: unknown configuration `other`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `doc_template`,
       and `template`
  --> tests/ui/invalid_config.rs:66:17
   |
66 | #[fieldwork(get(other = "anything"))]
   |                 ^^^^^

error: unknown configuration `other`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
  --> tests/ui/invalid_config.rs:72:13
   |
72 | #[fieldwork(other = "anything")]
   |             ^^^^^

error: unknown configuration `(get)`; did you mean `get`?

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
  --> tests/ui/invalid_config.rs:78:13
   |
78 | #[fieldwork((get)(copy))]
   |             ^^^^^

error: unknown configuration `(get)`; did you mean `get`?

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `where_clause`,
       `bounds`, `get`, `set`, `with`, `get_mut`, `without`, `take`, and `into_field`
  --> tests/ui/invalid_config.rs:82:13
   |
82 | #[fieldwork((get) = copy)]
   |             ^^^^^

error: unknown configuration `(get)`; did you mean `get`?

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `name`,
       `option_set_some`, `rename`, `skip`, `get`, `set`, `with`, `get_mut`, `without`, `take`,
       and `into_field`
  --> tests/ui/invalid_config.rs:86:22
   |
86 | struct Q(#[fieldwork((get) = copy)] ());
   |                      ^^^^^

error: unknown configuration `(get)`; did you mean `get`?

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `name`,
       `option_set_some`, `rename`, `skip`, `get`, `set`, `with`, `get_mut`, `without`, `take`,
       and `into_field`
  --> tests/ui/invalid_config.rs:89:22
   |
89 | struct R(#[fieldwork((get)(copy))] ());
   |                      ^^^^^

error: unexpected attribute format
  --> tests/ui/invalid_config.rs:92:24
   |
92 | struct S(#[fieldwork = 1.0] ());
   |                        ^^^

error: not recognized
  --> tests/ui/invalid_config.rs:98:17
   |
98 |     #[fieldwork(name = 1.0)]
   |                 ^^^^

error: unknown configuration `bad_method`

       In this position, fieldwork recognizes:
       `chain`, `copy`, `debug`, `deref`, `inspect`, `into`, `opt_in`, `option_borrow_inner`,
       `option_set_some`, `rename_predicate`, `rename_predicates`, `skip`, `vis`, `argument`, `name`,
       `option_set_some`, `rename`, `skip`, `get`, `set`, `with`, `get_mut`, `without`, `take`,
       and `into_field`
   --> tests/ui/invalid_config.rs:106:17
    |
106 |     #[fieldwork(bad_method(copy))]
    |                 ^^^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:114:17
    |
114 |     #[fieldwork("string")]
    |                 ^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:122:21
    |
122 |     #[fieldwork(get("string"))]
    |                     ^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:130:21
    |
130 |     #[fieldwork(get(name = 1.0))]
    |                     ^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:136:17
    |
136 | #[fieldwork(get("string"))]
    |                 ^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:143:17
    |
143 | #[fieldwork(get(template = 1.0))]
    |                 ^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:152:21
    |
152 |     #[fieldwork(get((name) = "foo"))]
    |                     ^^^^^^

error: unexpected attribute format
   --> tests/ui/invalid_config.rs:158:1
    |
158 | #[fieldwork = "not_a_list"]
    | ^

error: not recognized
   --> tests/ui/invalid_config.rs:165:13
    |
165 | #[fieldwork("string")]
    |             ^^^^^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:172:13
    |
172 | #[fieldwork(skip = 1.0)]
    |             ^^^^

error: not recognized
   --> tests/ui/invalid_config.rs:179:17
    |
179 | #[fieldwork(get((template) = "foo"))]
    |                 ^^^^^^^^^^

error: fieldwork does not support unions
   --> tests/ui/invalid_config.rs:186:1
    |
186 | / union FF {
187 | |     x: i32,
188 | |     y: f32,
189 | | }
    | |_^
